--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -10,6 +10,8 @@
   height: 100vh;
 }
 
+/*---------------サイドバーヘッダー-------------------*/
+
 .side_bar_header {
   height: 100px;
   padding: 0 20px;
@@ -36,6 +38,8 @@
   text-decoration: none;
 }
 
+/*---------------サイドバールーム一覧-------------------*/
+
 .rooms {
   background-color: #2f3e51;
   height: calc(100vh - 100px);
@@ -61,21 +65,114 @@
   background-color: #ffffff;
 }
 
+/*---------------チャットメイン-ヘッダー-----------------------*/
+
 .chat_header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
+
+.header_title {
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.header_button {
+  margin-top: 40px;
+}
+
+.header_button a {
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
+  text-decoration: none;
+}
+
+/*---------------チャットメインメッセージボード------------------------*/
 
 .messages {
   height: calc(100vh - 190px);
   background-color: #fafafa;
   padding: 46px 40px 0;
+  overflow: scroll;
 }
+
+.message {
+  margin: 10px 0;
+}
+
+.upper_message {
+  display: flex;
+}
+
+.message_user {
+  font-size: 16px;
+  color: #434a54;
+}
+
+.message_date {
+  padding-left: 10px;
+  font-size: 12px;
+  color: #999;
+}
+
+.lower-message {
+  margin-top: 10px;
+}
+
+.message_content {
+  font-size: 14px;
+  color: #434a54;
+  margin-bottom: 40px;
+}
+
+/*---------------チャット送信フォーム------------------------*/
 
 .form {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+  display: flex;
+}
+
+.form_input {
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+
+.form_message {
+  border: none;
+  width: 100%;
+  height: 50px;
+  padding-left: 10px;
+}
+
+.form_submit {
+  height: 50px;
+  border: none;
+  font-size: 16px;
+  color: white;
+  background-color: #38AEF0;
+  margin-left: 15px;
+  padding: 0 20px;
+}
+
+.form_image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
 
 /*-----------------チャットメインここまで---------------------*/
