--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,3 +1,63 @@
-<div class="chat_header"></div>
-<div class="messages"></div>
-<div class="form"></div>
+<div class="chat_header">
+
+  <div class="left_header">
+    <div class="header_title">
+      hogeguga
+    </div>
+  </div>
+
+  <div class="right_header">
+    <div class="header_button">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>
+
+</div>
+
+
+<div class="messages">
+
+  <div class="message">
+    <div class="upper_message">
+      <div class="message_user">
+        Tom
+      </div>
+      <div class="message_date">
+        2020/3/31(Wed) 12:43:00
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message_content">
+        おはよう
+      </div>
+    </div>
+  </div>
+
+  <div class="message">
+    <div class="upper_message">
+      <div class="user_name">
+        Tom
+      </div>
+      <div class="message_date">
+        2020/3/31(Wed) 12:47:00
+      </div>
+    </div>
+      <div class="lower-message">
+       <div class="message_content">
+        こんばんは
+       </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="form">
+  <div class="form_input">
+    <input class="form_message" placeholder="type a message">
+    <label class="form_image">
+      <span class="image_file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input class="form_submit" type="submit" value="送信">
+</div>
