--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,8 +1,8 @@
 <div class="side_bar_header"> 
 
   <div class="header_name">
-    <a href="#">Tom</a>
-  </div>
+    <%= link_to current_user.name, edit_user_path(current_user) %>  <%# link_to リンクの文字列, リンク先のパス %>
+  </div>                                                            <%# 今回の場合、リンクの文字列は現在ログインしているuser,パスはuser情報のeditページ %>
 
   <div class="create_room">
     <a href="#">チャットを作成する</a>
