--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -16,38 +16,7 @@
 
 
 <div class="messages">
-
-  <div class="message">
-    <div class="upper_message">
-      <div class="message_user">
-        Tom
-      </div>
-      <div class="message_date">
-        2020/3/31(Wed) 12:43:00
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message_content">
-        おはよう
-      </div>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="upper_message">
-      <div class="user_name">
-        Tom
-      </div>
-      <div class="message_date">
-        2020/3/31(Wed) 12:47:00
-      </div>
-    </div>
-      <div class="lower-message">
-       <div class="message_content">
-        こんばんは
-       </div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 
